<resources>
    <string name="app_name">HouseShare</string>
    <string name="facebook_app_id">1664267297145421</string>
    <string name="google_app_id">18540511502</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_create_group">CreateGroup</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_group_create">GroupCreate</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="open_drawer">"Open"</string>
    <string name="close_drawer">"close"</string>

    <string name="title_activity_account">accountActivity</string>

    <string name="lorem">""Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu ornare elit. Vestibulum elementum metus non ligula elementum varius. Quisque et tellus at tellus mollis suscipit sit amet id est. In vel condimentum erat. Aliquam erat volutpat. In auctor, magna et volutpat aliquet, magna justo finibus tortor, ac efficitur tortor lacus vel mauris. Donec id sem gravida, molestie orci sit amet, elementum velit. Nulla cursus massa ac purus cursus, ac congue sapien commodo. Morbi tristique metus vel arcu ullamcorper, non vestibulum odio ullamcorper. Nunc quis eros vel dui gravida hendrerit. Nunc a elementum lectus.

Donec ac nisl at arcu mollis posuere. Mauris a ligula porta, aliquam sapien eget, scelerisque dolor. Nullam suscipit dapibus mauris, facilisis dapibus erat tincidunt eu. Morbi non tellus nibh. Fusce a pellentesque arcu. Etiam porta at sapien eu semper. Phasellus sed facilisis ipsum. Pellentesque vulputate purus quis molestie luctus.

Mauris et mauris ut eros dapibus porta. Maecenas volutpat mauris quam. Vivamus metus nisl, fringilla id nibh id, cursus elementum eros. In suscipit sed risus vitae gravida. Sed sed odio nec mi consequat pretium. Ut ac dictum nibh. Integer aliquet mattis fermentum. Cras varius risus eget mattis semper. Nullam non nibh hendrerit, fermentum lacus non, pulvinar ante. Pellentesque vel posuere ligula, vitae tempus velit. Nunc viverra eu arcu sed cursus. Pellentesque vel est at dolor pellentesque maximus. Vivamus eu elit eu enim cursus fringilla in vel nisl. Suspendisse dignissim tempor magna vitae euismod.

Aenean sit amet maximus mi. Cras quis libero mauris. Aenean a tincidunt velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse tincidunt, lorem et sollicitudin condimentum, justo odio aliquam quam, non pharetra massa elit eget leo. Mauris leo nisl, euismod sit amet auctor nec, elementum ut mi. Praesent aliquet nisl eu pellentesque consectetur. Maecenas lorem justo, condimentum quis placerat ut, sollicitudin eget ante. Aliquam dictum pulvinar sapien id tristique. Proin ipsum nisl, pretium eget felis non, molestie ullamcorper purus. Aliquam pharetra lacinia ex, eget euismod lorem aliquet et. Praesent nec molestie elit. Curabitur eget condimentum nisl. Phasellus eu diam finibus, pretium elit in, egestas tellus.

Mauris nulla mauris, sollicitudin eu cursus ut, mollis id ex. Fusce consequat eget mauris at interdum. In vestibulum magna quis lorem dapibus pellentesque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tempor quam et tortor faucibus, a mattis arcu tincidunt. Nulla sem nunc, ultricies quis condimentum aliquam, pharetra quis massa. Praesent in aliquet purus. Maecenas ut vestibulum erat, eu accumsan libero. Phasellus ut tellus auctor, aliquet justo vitae, molestie nunc. In et urna vitae justo mollis bibendum. Proin volutpat tincidunt felis, nec aliquam leo mollis et. Aliquam luctus dictum augue, in pretium mauris mollis sit amet. Maecenas quam arcu, gravida non eros non, ullamcorper volutpat nisi.

</string>

    <string name="color_palette">Color Palette</string>
    <string name="title_activity_create_cost">CreateCost</string>
    <string name="action_settings">Settings</string>
    <string name="house_settings">House Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="custom.amount">Cusom Amount</string>
    <string name="amount">Amount</string>
    <string name="startDate">Start Date</string>
    <string name="Select">Select</string>
    <string name="chooseStartDate">Choose Start Date</string>
    <string name="endDate">End Date</string>
    <string name="select">Select</string>
    <string name="optionalEndDate">Optional End Date</string>
    <string name="interval">Interval</string>
    <string name="div">/</string>
    <string name="selectedColor">Selected Color</string>
    <string name="dueDate">Due Date</string>
    <string name="DatesPaid">Dates Paid</string>
    <string name="login">Login</string>
    <string name="welcomeToHouseShare">Welcome to HouseShare</string>
    <string name="pleaseLogIn">Please Log In</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="overdue">Overdue</string>
    <string name="houseDescription">House Description</string>
    <string name="info">info</string>
    <string name="houseName">House Name</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="chooseEndDate">Choose End Date</string>
    <string name="create_house">Create House</string>
    <string name="join_house">Join House</string>
    <string name="welcome">Welcome</string>
    <string name="Or">OR</string>
    <string name="pleaseSelectAnOption">Please Select An Option</string>
    <string name="enter_id">Enter ID</string>
    <string name="please_enter_house_id">Please Enter House ID</string>
    <string name="to_join_a_house_please_enter_it_s_id">To Join A House Please Enter It\'s ID</string>
    <string name="enter_house_name">Enter House Name</string>
    <string name="enter_house_description">Enter House Description</string>
    <string name="create">Create</string>
    <string name="to_create_a_group_please_enter_a_name_and_description">To Create A Group Please Enter A Name and Description</string>
    <string name="logo">Logo</string>
    <string name="createNewArea">Create New Area</string>
    <string name="enterName">Enter Name</string>
    <string name="select_category_color">Select Category Color</string>
    <string name="enter_description">Enter Description</string>
    <string name="StartDateCannotBeBeforeCurrentDate">Start Date Cannot be before current Date</string>
    <string name="endDateCannotBeOnOrBeforeStartDate">End Date Cannot be on or  before Start Date</string>
    <string name="endDateCannotBeBeofreCurrentDate">End Date Cannot be before current Date</string>
    <string name="updating">Updating</string>
    <string name="updatingHouse">Updating House...</string>
    <string name="createNewCost">Create New Cost</string>
    <string name="createNewTask">Create New Task</string>
    <string name="please_add_a_cost_to_get_started">Please Add A Cost To Get Started.</string>
    <string name="wouldYouLikeToArchiveThisCost">Would You Like To Archive This Cost?</string>
    <string name="archive">Archive?</string>
    <string name="pleaseAddATaskToGetStarted">Please Add A Task To Get Started</string>
    <string name="category">Category</string>
    <string name="owner">Owner</string>
    <string name="done">Done</string>
    <string name="notDone">Not Done</string>
    <string name="task_description">Task Description</string>
    <string name="confirmTask">Confirm Task</string>
    <string name="markAsDone">Mark As Done</string>
    <string name="taskNotes">Task Notes</string>
    <string name="task_notes">Task Notes</string>
    <string name="youMustHaveAtLeastOneMemberAssignedToThisTask">You must have at least one person Assigned to this Task.</string>
    <string name="error">Error</string>
    <string name="mustSetAStartDate">Must Set a Start Date</string>
    <string name="mustSetAnEndDate">Must Set an End Date</string>
    <string name="theOwnerHasNotCompletedThisTaskYet">The Owner has not completed this Task yet</string>
</resources>
