<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Fragments.FBLoginFragment">


    <Button
        android:id="@+id/FB_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:layout_below="@+id/plog"
        android:textAppearance="@android:style/TextAppearance.Large"
        />

    <ImageView
        android:contentDescription="@string/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/login"
        android:background="@mipmap/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeToHouseShare"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/plog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pleaseLogIn"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Welcome"
        />


</RelativeLayout>
