<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itt.matthew.houseshare.Activities.JoinHouse">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/joinHouseWelcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"/>


    <TextView
        android:layout_below="@id/joinHouseWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pleaseSelectAnOption"
        android:id="@+id/joinhouse.selectOption"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_house"
        android:id="@+id/createHouseButton"
        android:layout_margin="20dp"
        android:layout_below="@+id/joinhouse.selectOption"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:textAppearance="@android:style/TextAppearance.Large"/>


    <TextView
        android:layout_below="@id/createHouseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Or"
        android:id="@+id/joinhouse.or"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_house"
        android:id="@+id/joinExistingHouseButton"
        android:layout_below="@+id/joinhouse.or"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

</RelativeLayout>
