<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.GroupCreate"
    tools:showIn="@layout/activity_group_create">





    <TextView
        android:id="@+id/groupCreate.Welcome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/to_create_a_group_please_enter_a_name_and_description"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/groupCreateEnterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/groupCreate.Welcome"
        android:layout_margin="5dp"
        android:hint="@string/enter_house_name">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"/>


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/groupCreateEnterDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/groupCreateEnterName"
        android:layout_margin="5dp"
        android:hint="@string/enter_house_description">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"/>


    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/button2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:textAppearance="@android:style/TextAppearance.Large"/>



</RelativeLayout>
