<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/category_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/enterName">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/categoryNameInput"
            />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/category_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/enter_description">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/categoryDescriptionInput"
            />


    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/dialog.category.textview"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/select_category_color"
        android:textColor="#80000000" />




    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/color.preview"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:elevation="8dp"
        android:layout_margin="10dp"
        app:civ_border_width="1dp"
        app:civ_border_color="#ff0d0d0d"/>


</LinearLayout>