<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Activities.NewCost">



        <android.support.design.widget.TextInputLayout
            android:id="@+id/amount.layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_below="@+id/house.houseNameInput"
            android:layout_margin="5dp"
            android:hint="@string/amount">

            <EditText
                android:id="@+id/Amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/AmountTextView"
                android:layout_marginTop="4dp"
                android:inputType="numberDecimal"
                android:textColor="#80000000" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/startDateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@+id/startDate"
            android:text="@string/Select"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.Large"

            />


        <TextView
            android:id="@+id/startDate"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/amount.layout"
            android:layout_marginTop="4dp"
            android:text="@string/chooseStartDate"
            android:textColor="#80000000" />




        <TextView
            android:id="@+id/endDate"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startDateButton"
            android:layout_marginTop="4dp"
            android:text="@string/chooseEndDate"
            android:textColor="#80000000" />




        <Button
            android:id="@+id/endDateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@+id/endDate"
            android:text="@string/Select"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.Large" />




        <TextView
            android:id="@+id/IntervalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/endDateButton"
            android:layout_marginTop="4dp"
            android:text="@string/interval"
            android:textColor="#80000000" />

        <Spinner
            android:id="@+id/numberSpinner"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/IntervalSpinnerUI"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/IntervalSpinnerUI">

        </Spinner>

        <Spinner
            android:id="@+id/IntervalSpinnerUI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/IntervalTextView"
            android:layout_toRightOf="@+id/numberSpinner">
        </Spinner>

    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>
