<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itt.matthew.houseshare.Activities.joinExisting">





    <TextView
        android:id="@+id/joinExisting.Welcome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/to_join_a_house_please_enter_it_s_id"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/joinExisting_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/joinExisting.Welcome"
        android:layout_margin="5dp"
        android:hint="@string/please_enter_house_id"
        android:layout_centerHorizontal="true"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/EnterHouseIDField" />

    </android.support.design.widget.TextInputLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submitButton"
        android:layout_below="@id/joinExisting_layout"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:textAppearance="@android:style/TextAppearance.Large"/>
</RelativeLayout>
