<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="20dp"
    android:foreground="?android:attr/selectableItemBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/date.color"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date.status"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/app_name"
            android:textColor="@color/off_white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dueDate"
            android:id="@+id/date.due"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/date.color"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date.date"
            android:layout_below="@+id/date.due"
            android:text="TEST"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date.amountLabel"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/date.date"
            android:text="@string/amount"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date.amount"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/date.amountLabel"
            android:text="@string/amount" />

    </RelativeLayout>

</android.support.v7.widget.CardView>