<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Activities.NewCost">


        <Button
            android:id="@+id/task.startDateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@+id/task.startDate"
            android:text="@string/Select"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.Large"

            />


        <TextView
            android:id="@+id/task.startDate"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="4dp"
            android:text="@string/chooseStartDate"
            android:textColor="#80000000" />




        <TextView
            android:id="@+id/task.endDate"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task.startDateButton"
            android:layout_marginTop="4dp"
            android:text="@string/chooseEndDate"
            android:textColor="#80000000" />




        <Button
            android:id="@+id/task.endDateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@+id/task.endDate"
            android:text="@string/Select"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.Large" />




        <TextView
            android:id="@+id/task.IntervalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task.endDateButton"
            android:layout_marginTop="4dp"
            android:text="@string/interval"
            android:textColor="#80000000" />

        <Spinner
            android:id="@+id/task.numberSpinner"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/task.IntervalSpinnerUI"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/task.IntervalSpinnerUI">

        </Spinner>

        <Spinner
            android:id="@+id/task.IntervalSpinnerUI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task.IntervalTextView"
            android:layout_toRightOf="@+id/task.numberSpinner">
        </Spinner>

    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>
